# 100-exercises-to-learn-rust

./: Cargo.toml
.github/workflows/: ci.yml
book/book/: index.html  print.html  searchindex.js  searchindex.json
book/book/01_intro/: 00_welcome.html  01_syntax.html
book/book/02_basic_calculator/: 00_intro.html  01_integers.html  02_variables.html  03_if_else.html  04_panics.html  05_factorial.html  06_while.html  07_for.html  08_overflow.html  09_saturating.html  10_as_casting.html
book/book/03_ticket_v1/: 00_intro.html  01_struct.html  02_validation.html  03_modules.html  04_visibility.html  05_encapsulation.html  06_ownership.html  07_setters.html  08_stack.html  09_heap.html  10_references_in_memory.html  11_destructor.html  12_outro.html
book/book/04_traits/: 00_intro.html  01_trait.html  02_orphan_rule.html  03_operator_overloading.html  04_derive.html  05_trait_bounds.html  06_str_slice.html  07_deref.html  08_sized.html  09_from.html  10_assoc_vs_generic.html  11_clone.html  12_copy.html  13_drop.html  14_outro.html
book/book/05_ticket_v2/: 00_intro.html  01_enum.html  02_match.html  03_variants_with_data.html  04_if_let.html  05_nullability.html  06_fallibility.html  07_unwrap.html  08_error_enums.html  09_error_trait.html  10_packages.html  11_dependencies.html  12_thiserror.html  13_try_from.html  14_source.html  15_outro.html
book/book/06_ticket_management/: 00_intro.html  01_arrays.html  02_vec.html  (+14 more)
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: dto.rs  lib.rs  main.rs  models.rs  server.rs  store.rs
(+232 files in other folders)
